--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     font-weight: normal;
     margin-bottom: 5px;
 }
-ul#planned, ul#started, ul#finished{
+/*ul#planned, ul#started, ul#finished{
     list-style: none;
     height: 300px;
     width: 200px;
@@ -32,7 +32,7 @@ ul#started{
 }
 ul#finished{
     border: 2px solid deeppink;
-}
+}*/
 
 .md-modal {
     position: fixed;
