--- a/style_drager.css
+++ b/style_drager.css
@@ -128,14 +128,15 @@ h5 {
     background-image: linear-gradient(top, #eee, #ccc);
     border: 1px solid #0FCAB5;
     padding: 0 1.5em;
-    margin: 0.5em;
+    margin-bottom: 0.5em;
+    margin-top: -0.5em;
     font: bold 1em/2em Arial, Helvetica;
     text-decoration: none;
     color: #333;
     text-shadow: 0 1px 0 rgba(255,255,255,.8);
     border-radius: .2em;
     box-shadow: 0 0 1px 1px rgba(255,255,255,.8) inset, 0 1px 0 rgba(0,0,0,.3);
-	width: 190px;
+    width: 205px;
 }
 
 #Add:hover {
