--- a/style_drag.css
+++ b/style_drag.css
@@ -55,7 +55,7 @@ ul .sticky {
     display: block;
     height: auto;
     position: relative;
-    max-width: 15em;
+    width: 200px;
     padding: 1em;
     box-shadow: 5px 5px 7px rgba(33, 33, 33, 1);
     -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, .7);
