--- a/style_drag.css
+++ b/style_drag.css
@@ -15,18 +15,18 @@
 
 
 
-#planned {
+.left {
     float: left;
     width: 27%;
 }
 
-#started {
+.center {
     float: left;
     width: 27%;
     margin: 0;
 }
 
-#right {
+.right {
 
     float: left;
     width: 27%;
@@ -34,7 +34,7 @@
 }
 
 body {
-    font: normal 14px/20px Segoe Script, sans-serif;
+    font: normal 14px/20px Arial, sans-serif;
     background: #CBF0F0;
 }
 
@@ -47,21 +47,26 @@ ul {
     padding: 1% 0 0 2%;
 }
 
-ul .sticky {
+ul > .sticky {
     margin: 1em;
     float: left;
     -webkit-transform: rotate(-6deg);
-    -o-transform: rotate(-6deg);
+    transform: rotate(-6deg);
     display: block;
-    height: auto;
+    min-height: 100px;
     position: relative;
     width: 200px;
     padding: 1em;
     box-shadow: 5px 5px 7px rgba(33, 33, 33, 1);
     -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, .7);
-    transition: transform .2s linear;
-    -webkit-transition: -webkit-transform .2s linear;
+    transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    font-size: 13px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
+
+
 
 ul .sticky:nth-child(even) {
     transform: rotate(4deg);
@@ -78,43 +83,33 @@ ul .sticky:nth-child(3n) {
 }
 
 ul .sticky:nth-child(5n) {
-    -o-transform: rotate(5deg);
+    transform: rotate(5deg);
     -webkit-transform: rotate(5deg);
     position: relative;
     top: -10px;
 }
-li.sticky > div{
-    margin-bottom: 10px;
-}
-#planned > li {
+
+.left > li {
     background: #ffc;
 }
 
-#started > li {
+.center > li {
     background: #cfc;
 }
 
-#finished > li {
+.right > li {
     background: #ccf;
 }
 
 .delete{
     display: none;
     position: absolute;
-    right: 8px;
+    right: 10px;
     top: 10px;
 }
 
 
-ul .sticky:hover {
-    box-shadow: 10px 10px 7px rgba(0, 0, 0, .7);
-    -webkit-box-shadow: 10px 10px 7px rgba(0, 0, 0, .7);
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
-    position: relative;
-    z-index: 5;
-    cursor: pointer;
-}
+
 
 ul .sticky:hover .delete{
     display: block;
@@ -126,6 +121,16 @@ ul .sticky:hover .delete{
     background: #000000;
     height: 400px;
     float: left;
+}
+ul  .sticky:hover {
+
+    position: relative;
+    z-index: 5;
+    cursor: pointer;
+    box-shadow: 10px 10px 7px rgba(0, 0, 0, .7);
+    -webkit-box-shadow: 10px 10px 7px rgba(0, 0, 0, .7);
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
 }
 
 h2 {
@@ -164,6 +169,7 @@ p {
 .button:hover {
     background-color: #0FEDCE;
     background-image: linear-gradient(top, #fafafa, #0FEDCE);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fafafa', EndColorStr='#dddddd');
 }
 
 
