--- a/css/paralax.css
+++ b/css/paralax.css
@@ -8,30 +8,34 @@ body {
     font: 14px/1.3 Arial, sans-serif;
 }
 
+
+/* main slide */
 .pss_main {
-    height: 700px;
+    height: 650px;
     position: relative;
     width: 100%;
 }
 
+
+/* hide radio buttons*/
 .pss_main > input {
     display: none;
 }
 
 .pss_contr {
-    background: #27A9F0 url(../images/up.png) no-repeat center center;
+    background: #27A9F0 url(../images/down.png) no-repeat center center;
     cursor: pointer;
     display: none;
     height: 70px;
-    left: 50%;
+    width: 70px;
+    left: 47%;
     opacity: 0.3;
     position: absolute;
     top: 5%;
-    width: 70px;
     z-index: 2;
     -webkit-transition: opacity linear 0.3s;
     transition: opacity linear 0.3s;
-    border-radius: 50% ;
+    border-radius: 50%;
 
 }
 
@@ -40,10 +44,11 @@ body {
 }
 
 .sel_page_1:checked ~ .pss_contr.c2 {
-    background-image: url(../images/down.png);
+    background-image: url(../images/up.png);
     display: block;
     top: 80%;
 }
+
 
 .pss_slides {
     height: 100%;
@@ -71,14 +76,13 @@ body {
 
 .pss_slides ul li {
     height: 100%;
-    opacity: 0.1;
     position: relative;
-    text-align: center;
+    opacity: 0.5;
     -webkit-transition: opacity ease-in 1.0s;
     transition: opacity ease-in 1.0s;
 }
 
-.sel_page_1:checked ~ .pss_slides ul li:first-child{
+.sel_page_2:checked ~ .pss_slides ul li:last-child{
     opacity: 1;
 }
 
@@ -91,11 +95,113 @@ body {
     top: -100%;
 }
 
-.login-form{
-    display: block;
-    position: absolute;
-    top: 50px;
-    left: 50px;
 
+
+form:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.container { margin: 25px auto; position: relative; width: 900px; }
+
+
+#content {
+    background: #f9f9f9;
+    background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    -webkit-box-shadow: 0 1px 0 #fff inset;
+    box-shadow: 0 1px 0 #fff inset;
+    border: 1px solid #c4c6ca;
+    margin: 150px auto;
+    padding: 25px 0 0;
+    position: relative;
+    text-align: center;
+    text-shadow: 0 1px 0 #fff;
+    width: 400px;
+}
+
+#content:after,
+#content:before {
+    background: #f9f9f9;
+    background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    border: 1px solid #c4c6ca;
+    content: "";
+    display: block;
+    height: 100%;
+    left: -1px;
+    position: absolute;
+    width: 100%;
+}
+#content:after {
+    -webkit-transform: rotate(2deg);
+    transform: rotate(2deg);
+    top: 0;
+    z-index: -1;
+}
+#content:before {
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+    top: 0;
+    z-index: -2;
+}
+#content form { margin: 0 20px; position: relative }
+#content form input[type="text"],
+#content form input[type="password"] {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    background: #F0F0F0 url(http://cssdeck.com/uploads/media/items/8/8bcLQqF.png) no-repeat;
+    border: 1px solid #c8c8c8;
+    color: #777;
+    font: 13px Helvetica, Arial, sans-serif;
+    margin: 0 0 10px;
+    padding: 15px 10px 15px 40px;
+    width: 80%;
+}
+#content form input[type="text"]:focus,
+#content form input[type="password"]:focus {
+    -webkit-box-shadow: 0 0 2px #ed1c24 inset;
+    box-shadow: 0 0 2px #ed1c24 inset;
+    background-color: #F9F9F9;
+    border: 1px solid #ed1c24;
+    outline: none;
+}
+#username { background-position: 10px 10px !important }
+#password { background-position: 10px -53px !important }
+
+
+#content form input[type="submit"] {
+    background: rgb(254,231,154);
+
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+    border: 1px solid #D69E31;
+    color: #85592e;
+    cursor: pointer;
+    float: left;
+    font: bold 15px Helvetica, Arial, sans-serif;
+    height: 35px;
+    margin: 20px 0 35px 15px;
+    position: relative;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+    width: 120px;
+}
+#content form input[type="submit"]:hover {
+    background: rgb(254,193,81);
+    background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+    background: linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+}
+#content form div a {
+    color: #85592e;
+    float: right;
+    font-size: 14px;
+    margin: 30px 15px 0 0;
 }
 
