--- a/style_drager.css
+++ b/style_drager.css
@@ -1,3 +1,16 @@
+#box-inner {
+position: absolute;
+left: 20px;
+right: 20px;
+top: 20px;
+bottom: 20px;
+background: black;
+opacity: 0.3;
+filter: alpha(opacity=30);
+visibility:hidden;
+z-index: 200;
+}
+
 #category {
 	list-style-type: none;
 	text-decoration: none;
@@ -214,6 +227,7 @@ h5 {
 		position: absolute;
 		top: 30%;
 		left: 40%;
+		z-index: 999;
 }
 
 .yes:hover {color:red;
