--- a/css/paralax.css
+++ b/css/paralax.css
@@ -8,16 +8,12 @@ body {
     font: 14px/1.3 Arial, sans-serif;
 }
 
-
-/* main slide */
 .pss_main {
     height: 650px;
     position: relative;
     width: 100%;
 }
 
-
-/* hide radio buttons*/
 .pss_main > input {
     display: none;
 }
@@ -49,7 +45,6 @@ body {
     top: 80%;
 }
 
-
 .pss_slides {
     height: 100%;
     overflow: hidden;
@@ -60,10 +55,6 @@ body {
     -webkit-transition: all linear 1.0s;
     transition: all linear 1.0s;
 }
-
-
-
-
 
 .pss_slides ul {
     height: 100%;
@@ -82,20 +73,18 @@ body {
     transition: opacity ease-in 1.0s;
 }
 
-.sel_page_2:checked ~ .pss_slides ul li:last-child{
+.sel_page_2:checked ~ .pss_slides ul li:last-child {
     opacity: 1;
 }
 
 .pss_slides ul li img {
-   height: 100%;
+    height: 100%;
     width: 100%;
 }
 
 .sel_page_2:checked ~ .pss_slides ul {
     top: -100%;
 }
-
-
 
 form:after {
     content: ".";
@@ -104,13 +93,17 @@ form:after {
     clear: both;
     visibility: hidden;
 }
-.container { margin: 25px auto; position: relative; width: 900px; }
 
+.container {
+    margin: 25px auto;
+    position: relative;
+    width: 900px;
+}
 
 #content {
     background: #f9f9f9;
-    background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
-    background: linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(248, 248, 248, 1) 0%, rgba(249, 249, 249, 1) 100%);
+    background: linear-gradient(top, rgba(248, 248, 248, 1) 0%, rgba(249, 249, 249, 1) 100%);
     -webkit-box-shadow: 0 1px 0 #fff inset;
     box-shadow: 0 1px 0 #fff inset;
     border: 1px solid #c4c6ca;
@@ -125,8 +118,8 @@ form:after {
 #content:after,
 #content:before {
     background: #f9f9f9;
-    background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
-    background: linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(248, 248, 248, 1) 0%, rgba(249, 249, 249, 1) 100%);
+    background: linear-gradient(top, rgba(248, 248, 248, 1) 0%, rgba(249, 249, 249, 1) 100%);
     border: 1px solid #c4c6ca;
     content: "";
     display: block;
@@ -135,25 +128,32 @@ form:after {
     position: absolute;
     width: 100%;
 }
+
 #content:after {
     -webkit-transform: rotate(2deg);
     transform: rotate(2deg);
     top: 0;
     z-index: -1;
 }
+
 #content:before {
     -webkit-transform: rotate(-3deg);
     transform: rotate(-3deg);
     top: 0;
     z-index: -2;
 }
-#content form { margin: 0 20px; position: relative }
+
+#content form {
+    margin: 0 20px;
+    position: relative
+}
+
 #content form input[type="text"],
 #content form input[type="password"] {
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    -webkit-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
-    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0,0,0,0.08) inset;
+    -webkit-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
+    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
     background: #F0F0F0 url(http://cssdeck.com/uploads/media/items/8/8bcLQqF.png) no-repeat;
@@ -164,6 +164,7 @@ form:after {
     padding: 15px 10px 15px 40px;
     width: 80%;
 }
+
 #content form input[type="text"]:focus,
 #content form input[type="password"]:focus {
     -webkit-box-shadow: 0 0 2px #ed1c24 inset;
@@ -172,16 +173,20 @@ form:after {
     border: 1px solid #ed1c24;
     outline: none;
 }
-#username { background-position: 10px 10px !important }
-#password { background-position: 10px -53px !important }
 
+#username {
+    background-position: 10px 10px !important
+}
 
-#content form input[type="submit"] {
-    background: rgb(254,231,154);
+#password {
+    background-position: 10px -53px !important
+}
 
+#content form input[type="button"] {
+    background: rgb(254, 231, 154);
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
     border: 1px solid #D69E31;
     color: #85592e;
     cursor: pointer;
@@ -190,14 +195,16 @@ form:after {
     height: 35px;
     margin: 20px 0 35px 15px;
     position: relative;
-    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     width: 120px;
 }
-#content form input[type="submit"]:hover {
-    background: rgb(254,193,81);
-    background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-    background: linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+
+#content form input[type="button"]:hover {
+    background: rgb(254, 193, 81);
+    background: -webkit-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+    background: linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
 }
+
 #content form div a {
     color: #85592e;
     float: right;
