add custom font,delete unused files

--- a/style_drager.css
+++ b/style_drager.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Delicate Little Flower;
+    src: url('font/Mf%20Delicate%20Little%20Flower.ttf');
+}
+
 #box-inner {
 position: absolute;
 left: 20px;
@@ -22,7 +27,7 @@ z-index: 200;
 }
 
 body {
-    font: normal 14px/20px Segoe Script, sans-serif;
+    font: normal 14px/20px Delicate Little Flower, sans-serif;
     background: #CBF0F0;
 }
 
@@ -149,7 +154,7 @@ h5 {
     padding: 0 1.5em;
     margin: 0.5em;
 	margin-left:25px;
-    font: bold 1em/2em Arial, Helvetica;
+    font: bold 1.3em/2em Delicate Little Flower, Helvetica;
     text-decoration: none;
     color: #333;
     text-shadow: 0 1px 0 rgba(255,255,255,.8);
