--- a/style_drag.css
+++ b/style_drag.css
@@ -33,11 +33,6 @@
     margin: 0;
 }
 
-body {
-    font: normal 14px/20px Arial, sans-serif;
-    background: #CBF0F0;
-}
-
 ul, li {
     list-style: none;
 }
@@ -158,7 +153,7 @@ p {
     border: 1px solid #0FCAB5;
     padding: 0 1.5em;
     margin: 0.5em;
-    font: bold 1em/2em Arial, Helvetica;
+    font: 900 1.25em/2em Delicate Little Flower, Helvetica;
     text-decoration: none;
     color: #333;
     text-shadow: 0 1px 0 rgba(255,255,255,.8);
@@ -188,5 +183,5 @@ p {
     pointer-events: none;
 }
 .add:before {
-    content: "\271A";
+    content: "+";
 }
