--- a/style_drag.css
+++ b/style_drag.css
@@ -128,17 +128,17 @@ ul  .sticky:hover {
     -webkit-transform: scale(1.3);
 }
 
-h2 {
+h2 .sticky{
     padding-bottom: 25px;
 }
 
-h5 {
+h5 .sticky{
     position: absolute;
     bottom: 3px;
     right: 3px;
 }
 
-p {
+p .sticky{
     padding: 5px 0;
     text-decoration: underline;
 
@@ -153,7 +153,7 @@ p {
     border: 1px solid #0FCAB5;
     padding: 0 1.5em;
     margin: 0.5em;
-    font: 900 1.25em/2em Delicate Little Flower, Helvetica;
+    font: 900 1.25em/2em Rabbit Hole, Helvetica;
     text-decoration: none;
     color: #333;
     text-shadow: 0 1px 0 rgba(255,255,255,.8);
