increase font in form

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@
     -webkit-box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.79);
     -moz-box-shadow:    4px 2px 5px 0px rgba(0, 0, 0, 0.79);
     box-shadow:         4px 2px 5px 0px rgba(0, 0, 0, 0.79);
+    font-size: 1.4em;
+
 }
 
 
@@ -136,6 +138,7 @@
     border: none;
     padding: 3px 20px;
     outline: 0;
+    font: 1em/1em Rabbit Hole, Helvetica;
 }
 .md-content input[type="button"]:hover{
     background-color: #00749e;
